--- a/package.xml
+++ b/package.xml
@@ -19,6 +19,7 @@
   <build_depend>moveit_ros_planning</build_depend>
   <build_depend>moveit_ros_planning_interface</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>eigen_conversions</build_depend>
 
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
@@ -30,6 +31,7 @@
   <build_export_depend>moveit_ros_planning</build_export_depend>
   <build_export_depend>moveit_ros_planning_interface</build_export_depend>
   <build_export_depend>message_runtime</build_export_depend>
+  <build_export_depend>eigen_conversions</build_export_depend>
 
   <exec_depend>rospy</exec_depend>
   <exec_depend>roscpp</exec_depend>
@@ -41,6 +43,7 @@
   <exec_depend>moveit_ros_planning</exec_depend>
   <exec_depend>moveit_ros_planning_interface</exec_depend>
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>eigen_conversions</exec_depend>
 
   <export>
   </export>
